- Adicionei um ArrayList no lugar dos vetores no App.java; - Removi alguns comentários desnecessários no código das classes; - Exclui algumas classes duplicadas que estavam fora da pasta modelo;