@@ -13,22 +13,17 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Date;
+import java.util.List;
 
 /**
- * Responsável por gravar e ler, em arquivos de texto (.csv), os objetos
- * das classes Livro, Usuario, Bibliotecaria, Emprestimo e Reserva.
+ * Grava e lê, em arquivos .csv, os objetos de Livro, Usuario,
+ * Bibliotecaria, Emprestimo e Reserva.
  *
- * Não usa nenhuma classe de Collections (List, ArrayList, etc.) — tudo é
- * feito com arrays comuns. Como um array não sabe o próprio "tamanho
- * final" antes de ser criado, cada método de leitura primeiro CONTA
- * quantas linhas válidas existem no arquivo, cria o array já do tamanho
- * certo, e só depois lê o arquivo de novo para preencher o array.
- *
- * Para Emprestimo e Reserva, como eles guardam uma referência a um
- * Usuario e a um Livro (não apenas o id), a leitura precisa receber os
- * arrays de usuários e livros já carregados, para "religar" cada
- * empréstimo/reserva ao objeto correto em memória.
+ * Emprestimo e Reserva guardam referência a um Usuario e a um Livro, então
+ * a leitura precisa receber as listas de usuários e livros já carregadas,
+ * para religar cada empréstimo/reserva ao objeto correto em memória.
  */
 public class ManipuladorArquivos {
 
@@ -36,27 +31,10 @@ public class ManipuladorArquivos {
     private static final SimpleDateFormat FORMATO_DATA = new SimpleDateFormat("dd/MM/yyyy");
 
     // ---------------------------------------------------------------
-    // Auxiliar: conta quantas linhas não vazias existem no arquivo,
-    // para sabermos o tamanho exato do array antes de criá-lo.
-    // ---------------------------------------------------------------
-    private static int contarLinhas(String caminhoArquivo) throws IOException {
-        int contador = 0;
-        try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
-            String linha;
-            while ((linha = br.readLine()) != null) {
-                if (!linha.isBlank()) {
-                    contador++;
-                }
-            }
-        }
-        return contador;
-    }
-
-    // ---------------------------------------------------------------
     // LIVRO
     // ---------------------------------------------------------------
 
-    public static void salvarLivros(Livro[] livros, String caminhoArquivo) throws IOException {
+    public static void salvarLivros(List<Livro> livros, String caminhoArquivo) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new FileWriter(caminhoArquivo))) {
             for (Livro livro : livros) {
                 bw.write(livro.toCSV());
@@ -65,22 +43,18 @@ public class ManipuladorArquivos {
         }
     }
 
-    public static Livro[] lerLivros(String caminhoArquivo) throws IOException {
-        int total = contarLinhas(caminhoArquivo);
-        Livro[] livros = new Livro[total];
-
+    public static List<Livro> lerLivros(String caminhoArquivo) throws IOException {
+        List<Livro> livros = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
             String linha;
-            int i = 0;
             while ((linha = br.readLine()) != null) {
-                if (linha.isBlank()) continue;
+                if (linha.trim().isEmpty()) continue;
                 String[] c = linha.split(SEP, -1);
                 int idLivro = Integer.parseInt(c[0]);
                 String titulo = c[1];
                 String autor = c[2];
                 String status = c[3];
-                livros[i] = new Livro(idLivro, titulo, autor, status);
-                i++;
+                livros.add(new Livro(idLivro, titulo, autor, status));
             }
         }
         return livros;
@@ -90,7 +64,7 @@ public class ManipuladorArquivos {
     // USUARIO
     // ---------------------------------------------------------------
 
-    public static void salvarUsuarios(Usuario[] usuarios, String caminhoArquivo) throws IOException {
+    public static void salvarUsuarios(List<Usuario> usuarios, String caminhoArquivo) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new FileWriter(caminhoArquivo))) {
             for (Usuario usuario : usuarios) {
                 bw.write(usuario.toCSV());
@@ -99,22 +73,18 @@ public class ManipuladorArquivos {
         }
     }
 
-    public static Usuario[] lerUsuarios(String caminhoArquivo) throws IOException {
-        int total = contarLinhas(caminhoArquivo);
-        Usuario[] usuarios = new Usuario[total];
-
+    public static List<Usuario> lerUsuarios(String caminhoArquivo) throws IOException {
+        List<Usuario> usuarios = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
             String linha;
-            int i = 0;
             while ((linha = br.readLine()) != null) {
-                if (linha.isBlank()) continue;
+                if (linha.trim().isEmpty()) continue;
                 String[] c = linha.split(SEP, -1);
                 int idUsuario = Integer.parseInt(c[0]);
                 String nome = c[1];
                 String telefone = c[2];
                 String email = c[3];
-                usuarios[i] = new Usuario(idUsuario, nome, telefone, email);
-                i++;
+                usuarios.add(new Usuario(idUsuario, nome, telefone, email));
             }
         }
         return usuarios;
@@ -124,7 +94,7 @@ public class ManipuladorArquivos {
     // BIBLIOTECARIA
     // ---------------------------------------------------------------
 
-    public static void salvarBibliotecarias(Bibliotecaria[] bibliotecarias, String caminhoArquivo) throws IOException {
+    public static void salvarBibliotecarias(List<Bibliotecaria> bibliotecarias, String caminhoArquivo) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new FileWriter(caminhoArquivo))) {
             for (Bibliotecaria bibliotecaria : bibliotecarias) {
                 bw.write(bibliotecaria.toCSV());
@@ -133,33 +103,28 @@ public class ManipuladorArquivos {
         }
     }
 
-    public static Bibliotecaria[] lerBibliotecarias(String caminhoArquivo) throws IOException {
-        int total = contarLinhas(caminhoArquivo);
-        Bibliotecaria[] bibliotecarias = new Bibliotecaria[total];
-
+    public static List<Bibliotecaria> lerBibliotecarias(String caminhoArquivo) throws IOException {
+        List<Bibliotecaria> bibliotecarias = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
             String linha;
-            int i = 0;
             while ((linha = br.readLine()) != null) {
-                if (linha.isBlank()) continue;
+                if (linha.trim().isEmpty()) continue;
                 String[] c = linha.split(SEP, -1);
                 String idBibliotecaria = c[0];
                 String nome = c[1];
                 String turno = c[2];
-                bibliotecarias[i] = new Bibliotecaria(idBibliotecaria, nome, turno);
-                i++;
+                bibliotecarias.add(new Bibliotecaria(idBibliotecaria, nome, turno));
             }
         }
         return bibliotecarias;
     }
 
     // ---------------------------------------------------------------
-    // EMPRESTIMO
-    // (depende dos arrays de usuários e livros já carregados, para
-    // religar as referências a partir dos ids gravados no arquivo)
+    // EMPRESTIMO (depende das listas de usuários e livros já carregadas,
+    // para religar as referências a partir dos ids gravados no arquivo)
     // ---------------------------------------------------------------
 
-    public static void salvarEmprestimos(Emprestimo[] emprestimos, String caminhoArquivo) throws IOException {
+    public static void salvarEmprestimos(List<Emprestimo> emprestimos, String caminhoArquivo) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new FileWriter(caminhoArquivo))) {
             for (Emprestimo emprestimo : emprestimos) {
                 bw.write(emprestimo.toCSV());
@@ -168,16 +133,13 @@ public class ManipuladorArquivos {
         }
     }
 
-    public static Emprestimo[] lerEmprestimos(String caminhoArquivo, Usuario[] usuarios, Livro[] livros)
+    public static List<Emprestimo> lerEmprestimos(String caminhoArquivo, List<Usuario> usuarios, List<Livro> livros)
             throws IOException, ParseException {
-        int total = contarLinhas(caminhoArquivo);
-        Emprestimo[] emprestimos = new Emprestimo[total];
-
+        List<Emprestimo> emprestimos = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
             String linha;
-            int i = 0;
             while ((linha = br.readLine()) != null) {
-                if (linha.isBlank()) continue;
+                if (linha.trim().isEmpty()) continue;
                 String[] c = linha.split(SEP, -1);
                 int idEmprestimo = Integer.parseInt(c[0]);
                 Date dataEmprestimo = c[1].isEmpty() ? null : FORMATO_DATA.parse(c[1]);
@@ -193,19 +155,17 @@ public class ManipuladorArquivos {
                 Emprestimo emprestimo = new Emprestimo(idEmprestimo, dataEmprestimo, dataDevolucaoPrevista,
                         status, usuario, livro);
                 emprestimo.setDataDevolucaoEfetiva(dataDevolucaoEfetiva);
-                emprestimos[i] = emprestimo;
-                i++;
+                emprestimos.add(emprestimo);
             }
         }
         return emprestimos;
     }
 
     // ---------------------------------------------------------------
-    // RESERVA
-    // (mesma lógica de religar por id usada em Emprestimo)
+    // RESERVA (mesma lógica de religar por id usada em Emprestimo)
     // ---------------------------------------------------------------
 
-    public static void salvarReservas(Reserva[] reservas, String caminhoArquivo) throws IOException {
+    public static void salvarReservas(List<Reserva> reservas, String caminhoArquivo) throws IOException {
         try (BufferedWriter bw = new BufferedWriter(new FileWriter(caminhoArquivo))) {
             for (Reserva reserva : reservas) {
                 bw.write(reserva.toCSV());
@@ -214,16 +174,13 @@ public class ManipuladorArquivos {
         }
     }
 
-    public static Reserva[] lerReservas(String caminhoArquivo, Usuario[] usuarios, Livro[] livros)
+    public static List<Reserva> lerReservas(String caminhoArquivo, List<Usuario> usuarios, List<Livro> livros)
             throws IOException, ParseException {
-        int total = contarLinhas(caminhoArquivo);
-        Reserva[] reservas = new Reserva[total];
-
+        List<Reserva> reservas = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new FileReader(caminhoArquivo))) {
             String linha;
-            int i = 0;
             while ((linha = br.readLine()) != null) {
-                if (linha.isBlank()) continue;
+                if (linha.trim().isEmpty()) continue;
                 String[] c = linha.split(SEP, -1);
                 int idReserva = Integer.parseInt(c[0]);
                 Date dataReserva = c[1].isEmpty() ? null : FORMATO_DATA.parse(c[1]);
@@ -234,19 +191,13 @@ public class ManipuladorArquivos {
                 Usuario usuario = buscarUsuarioPorId(usuarios, idUsuario);
                 Livro livro = buscarLivroPorId(livros, idLivro);
 
-                reservas[i] = new Reserva(idReserva, dataReserva, status, usuario, livro);
-                i++;
+                reservas.add(new Reserva(idReserva, dataReserva, status, usuario, livro));
             }
         }
         return reservas;
     }
 
-    // ---------------------------------------------------------------
-    // Auxiliares privados: religam Emprestimo/Reserva ao Usuario/Livro
-    // correto, procurando pelo id dentro do array já carregado.
-    // ---------------------------------------------------------------
-
-    private static Usuario buscarUsuarioPorId(Usuario[] usuarios, int id) {
+    private static Usuario buscarUsuarioPorId(List<Usuario> usuarios, int id) {
         for (Usuario u : usuarios) {
             if (u.getIdUsuario() == id) {
                 return u;
@@ -255,7 +206,7 @@ public class ManipuladorArquivos {
         return null;
     }
 
-    private static Livro buscarLivroPorId(Livro[] livros, int id) {
+    private static Livro buscarLivroPorId(List<Livro> livros, int id) {
         for (Livro l : livros) {
             if (l.getIdLivro() == id) {
                 return l;
